--- a/templates/conference/index.html.twig
+++ b/templates/conference/index.html.twig
@@ -5,9 +5,9 @@
 {% block body %}
 {% for conference in conferences %}
          <h4>{{ conference }}</h4>
-+        <p>
-+            <a href="/conference/{{ conference.id }}">View</a>
-+        </p>
+       <p>
+           <a href="/conference/{{ conference.id }}">View</a>
+    </p>
      {% endfor %}
     
 {%endblock%}
